tests/general/phase0/ssz_generic/basic_vector/invalid/vec_uint256_3_random_one_more/serialized.ssz
Lã∑Çz›µË÷Ù<Ì"1ÁŸÅÜÃ59ã“ä„{JMêµ"ìH'™kH≤É=hZÉ„ËwëΩû˘‘Ü€"OxÚ¸±Ç'ÓÑ·£ëºrLIô2ãÂmã#µ›xF<ßì÷]+·ÃjÓ/\˝ª∏±IÈ*·&°-˝'h˚©4∞á¯ÈÇ